# procon2022_comp_2nd

./: Cargo.toml  README.md
src/: audio_vec.rs  lib.rs  main.rs  precalc.rs  request.rs  solve.rs
src/audio_vec/: composite.rs  mod_int.rs  ntt.rs  owned.rs
src/audio_vec/ntt/: montgomery.rs  tests.rs
src/audio_vec/owned/: mod_int.rs  ntt.rs  pixel.rs
src/audio_vec/owned/ntt/: tests.rs
src/request/: mock.rs  net.rs
src/solve/: card_voice.rs
