[package]
name = "procon2022_comp_2nd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.1"
dotenv = "0.15.0"
env_logger = "0.9.1"
log = "0.4.17"
num = "0.4.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
wav = "1.0.0"
wide = "0.7.5"
wrapping_proc_macro = "1.0.0"
